<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="@color/colorMain"
        android:textSize="34sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-light"
        android:letterSpacing="0.3"
        android:text="@string/for_your_account"
        android:textColor="@color/colorMain"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/colorMain"
            android:hint="@string/name"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorMain"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorMain"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain" />

        <CheckBox
            android:id="@+id/ckbAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/agreement_check"
            android:textColor="@color/colorMain" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/colorMain"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:enabled="false"/>

        <Button
            android:id="@+id/btnLogIn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/log_in"
            android:textColor="@color/colorMain" />
    </LinearLayout>

</LinearLayout>